syntax = "proto3";

message QueryViewRequest {
    repeated string view_ids = 1;
}
message ViewId {
    string view_id = 1;
}
message RepeatedViewId {
    repeated string items = 1;
}
